--- a/package.json
+++ b/package.json
@@ -1,71 +1,51 @@
 {
-  "name": "todomvc-redux-react-ts",
-  "version": "2.1.0",
-  "description": "TodoMVC example using Redux, React, and Typescript ",
+  "name": "todomvc-redux-react-v15-typescript",
+  "version": "0.0.1",
+  "main": "src/index.tsx",
   "repository": {
     "type": "git",
-    "url": "git@github.com:jaysoo/todomvc-redux-react-typescript.git"
+    "url": "https://github.com/valera-rozuvan/todomvc-redux-react-v15-typescript.git"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "author": "Valera Rozuvan",
+  "license": "MIT",
+  "browserslist": [
+    "> 0.25%",
+    "not dead"
+  ],
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.config.js --progress --profile --colors",
-    "start": "cross-env NODE_ENV=development node server",
-    "start:prod": "cross-env NODE_ENV=production node server",
-    "test": "tsc && mocha --require test-setup --recursive ./dist/**/__spec__/**/*-spec.js"
-  },
-  "author": "Jack Hsu <jack.hsu@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "classnames": "2.2.5",
-    "concurrently": "3.4.0",
-    "express": "4.15.2",
-    "extract-text-webpack-plugin": "2.1.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2",
-    "redux-actions": "2.2.1",
-    "serve-static": "1.12.1",
-    "todomvc-app-css": "2.0.6",
-    "yargs": "7.0.1"
+    "build:local": "ENV=local webpack",
+    "build:prod": "ENV=prod webpack",
+    "start": "ENV=local webpack-dev-server"
   },
   "devDependencies": {
-    "@types/assertion-error": "1.0.30",
-    "@types/chai": "3.4.35",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
     "@types/classnames": "0.0.32",
-    "@types/mocha": "2.2.39",
-    "@types/react": "16.0.10",
-    "@types/react-dom": "16.0.1",
+    "@types/react": "^15.7.6",
+    "@types/react-dom": "^15.5.13",
     "@types/react-redux": "5.0.10",
     "@types/redux-actions": "2.2.2",
-    "awesome-typescript-loader": "3.2.3",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.0.1",
-    "babel-loader": "7.1.2",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-latest": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-runtime": "6.26.0",
-    "chai": "3.5.0",
-    "chalk": "2.1.0",
-    "cross-env": "5.0.5",
-    "css-loader": "0.28.7",
-    "eslint": "4.8.0",
-    "eslint-plugin-react": "7.4.0",
-    "file-loader": "1.1.5",
-    "html-loader": "0.5.1",
-    "html-webpack-plugin": "2.30.1",
-    "jsdom": "9.11.0",
-    "mocha": "4.0.1",
-    "redux-devtools": "3.4.0",
-    "socket.io": "1.7.3",
-    "stats-webpack-plugin": "0.6.1",
-    "style-loader": "0.19.0",
-    "typescript": "2.5.3",
-    "webpack": "3.7.1",
-    "webpack-dev-server": "2.9.1",
-    "webpack-hot-middleware": "2.19.1"
+    "@types/webpack": "^5.28.0",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^10.2.4",
+    "dotenv": "^16.0.0",
+    "html-webpack-plugin": "^5.3.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.56.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
+  },
+  "dependencies": {
+    "classnames": "2.2.5",
+    "react": "^15.7.0",
+    "react-dom": "^15.7.0",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "redux-actions": "2.2.1"
   }
 }
