--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,14 @@
 {
-  "version": "2.5.3",
   "compilerOptions": {
-    "module": "commonjs",
     "target": "es5",
     "jsx": "react",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "strictNullChecks": false,
-    "outDir": "dist"
-  },
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "lib": [
+      "es2018",
+      "dom"
+    ]
+  }
 }
