--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^15.7.0",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
-    "redux-actions": "2.2.1"
+    "redux-actions": "2.2.1",
+    "uuid": "^8.3.2"
   }
 }
