--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^15.5.13",
     "@types/react-redux": "5.0.10",
     "@types/redux-actions": "2.2.2",
+    "@types/uuid": "^8.3.4",
     "@types/webpack": "^5.28.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^10.2.4",
